# fourth-playwright-mcp

./: .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  package.json  pyproject.toml  railway.json
skills/browser-automation/: SKILL.md
skills/fourth-workflows/: SKILL.md
src/: auth.py  server.py  stealth.js
src/providers/: playwright_subprocess.py  skills.py
src/tools/: auth.py  content.py  extraction.py  forms.py  navigation.py  performance.py  scripting.py  search.py  session.py
tests/integration/: __init__.py  conftest.py  test_auth_integration.py  test_extraction_integration.py  test_forms_integration.py  test_navigation_integration.py  test_server_integration.py
tests/unit/: test_auth.py  test_extraction.py  test_forms.py  test_human_behavior.py  test_navigation.py  test_performance.py  test_proxy.py  test_search.py  test_server_wiring.py  test_session_enhancements.py  test_stealth.py
thoughts/shared/handoffs/kraken-20260327/: current.md
thoughts/shared/handoffs/kraken-dom-extraction/: current.md
thoughts/shared/handoffs/kraken-performance-20260327/: current.md
